Fix small typos, maintain line width

--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -11,7 +11,11 @@
 \subsection{Regelmässige Treffen}
 \label{subsec:meetings}
 
-Regelmässige Besprechungen mit dem Betreuer der Arbeit halfen die gesteckten Ziele zu erreichen und Fehlentwicklungen zu vermeiden. Der Betreuer unterstützte den Autor dabei mit Vorschlägen. Die Treffen fanden mindestens alle zwei Wochen statt, sie wurden in Form eines Protokolles festgehalten.
+Regelmässige Besprechungen mit dem Betreuer der Arbeit halfen die
+gesteckten Ziele zu erreichen und Fehlentwicklungen zu vermeiden. Der
+Betreuer unterstützte den Autor dabei mit Vorschlägen. Die Treffen
+fanden mindestens alle zwei Wochen statt, sie wurden in Form eines
+Protokolles festgehalten.
 
 \section{Projekphasen}
 \label{sec:project_schedule}
@@ -60,11 +64,17 @@ Die Phasen der Erarbeitung der theoretischen Grundlagen sowie die Erstellung der
 
 \subsubsection{Projektstart}
 \label{subsubsec:kick_off}
-In der ersten Phase wurden die Meilensteine der Arbeit identifiziert und skizziert. Um Details der Aufgabe zu verstehen, wurde das notwendige Vorwissen über globale Beleuchtungsalgorithmen erarbeitet. Weiter wurde das Grundgerüst dieser Dokumentation erstellt.
+
+In der ersten Phase wurden die Meilensteine der Arbeit identifiziert und
+skizziert. Um Details der Aufgabe zu verstehen, wurde das notwendige
+Vorwissen über globale Beleuchtungsalgorithmen erarbeitet. Weiter wurde
+das Grundgerüst dieser Dokumentation erstellt.
 
 \subsubsection{Anforderungen}
 \label{ssubsec:requirements}
-In dieser Phase wurde das Ziel dieser Projektarbeit festgelegt. Vom Ziel ausgehend wurden die dazu erforderlichen Projektphasen festgelegt.
+
+In dieser Phase wurde das Ziel dieser Projektarbeit festgelegt. Vom Ziel
+ausgehend wurden die dazu erforderlichen Projektphasen festgelegt.
 
 \subsubsection{Erarbeitung theoretische Grundlagen}
 \label{ssubsec:theoretical_background}
@@ -73,7 +83,9 @@ In dieser Phase wurde das Ziel dieser Projektarbeit festgelegt. Vom Ziel ausgehe
 \subsubsection{Dokumentation}
 \label{ssubsec:documentation}
 
-Die vorliegende Arbeit entspricht der Dokumentation. Sie wurde während der gesamten Projektarbeit stetig erweitert und diente zur Reflexion von fertiggestellten Teilen.
+Die vorliegende Arbeit entspricht der Dokumentation. Sie wurde während
+der gesamten Projektarbeit stetig erweitert und diente zur Reflexion von
+fertiggestellten Teilen.
 
 \section{Technologien}
 \label{sec:technologies}
@@ -83,17 +95,21 @@ Die vorliegende Arbeit entspricht der Dokumentation. Sie wurde während der gesa
 
 \noindent\emph{Dokumentation}
 \begin{description}
-    \item[\LaTeX] Eine Makro-Sammlung für das \TeX-System. Wurde zur Erstellung
-        dieser Dokumentation eingesetzt. Diese Dokumentation wurde mittels \LaTeX{} geschrieben.
+    \item[\LaTeX] Eine Makro-Sammlung für das \TeX-System. Wurde zur
+        Erstellung dieser Dokumentation eingesetzt. Diese Dokumentation
+        wurde mittels \LaTeX{} geschrieben.
     \item[Make] Build-Automations-Werkzeug, wurde zur Erstellung dieses Dokumentes eingesetzt.
-    \item[zotero] Ein freies, quelloffenes Literaturverwaltungsprogramm zum Sammeln, Verwalten und Zitieren unterschiedlicher Online- und Offline-Quellen~\cite{wikipedia_foundation_zotero_2015}.
+    \item[zotero] Ein freies, quelloffenes Literaturverwaltungsprogramm
+        zum Sammeln, Verwalten und Zitieren unterschiedlicher Online-
+        und Offline-Quellen~\cite{wikipedia_foundation_zotero_2015}.
     \item[VIM] Vi IMproved. Ein freier, quelloffener Texteditor zur Textbearbeitung.
 \end{description}
 
 \noindent\emph{Arbeitsorganisation}
 \begin{description}
-    \item[Git] Freie Software zur verteilten Versionsverwaltung, wurde für die
-        Entwicklung dieser Dokumentation verwendet. Die Projektarbeit findet sich
+    \item[Git] Freie Software zur verteilten Versionsverwaltung, wurde
+        für die Entwicklung dieser Dokumentation verwendet. Die
+        Projektarbeit findet sich
         unter~\href{https://www.github.com/sosterwalder/mte7101-project1}{GitHub}\footnote{\href{https://www.github.com/sosterwalder/mte7101-project1}{https://www.github.com/sosterwalder/mte7101-project1}}.
     \item[GitHub] Eine freie Hosting-Platform für Git mit Weboberfläche.
 \end{description}
@@ -104,5 +120,8 @@ Die vorliegende Arbeit entspricht der Dokumentation. Sie wurde während der gesa
 \subsubsection{Pseudecode}
 \label{ssubsec:standards_guidelines:psuedocode}
 
-Da der Autor dieser Arbeit bedingt durch seine täglich Arbeit mit der Programmiersprache Python relativ bewandert ist, wird daher diese als Sprache zur Beschreibung von Pseudcode verwendet.
-Dabei wird aber kein Augenmerk auf die formale Korrektheit, geschweige denn der Lauffähigkeit des Pseudocodes gelegt.
+Da der Autor dieser Arbeit bedingt durch seine tägliche Arbeit mit der
+Programmiersprache Python relativ bewandert ist, wird daher diese als
+Sprache zur Beschreibung von Pseudcode verwendet.  Dabei wird aber kein
+Augenmerk auf die formale Korrektheit, geschweige denn der Lauffähigkeit
+des Pseudocodes gelegt.
