--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -448,8 +448,8 @@ wobei $\bm{x}$ den abzutastenden Punkt im Raum darstellt.
 \subsection{Primitive}
 \label{subsec:implicit_surfaces_primitives}
 
-\cite{hart_sphere_1994} führt in seinem Paper~\todo{Use another word?} einige
-(geometrische) Primitve auf, welche nachfolgende erläutert werden.
+\cite{hart_sphere_1994} führt in seiner Arbeit einige
+(geometrische) Primitive auf, welche nachfolgende erläutert werden.
 
 \subsubsection{Ebene}
 \label{ssubsec:implicit_surfaces_primitives_plane}
