Provide an introduction

--- a/doc/inc/60/63_rendering_implicit_surfaces.tex
+++ b/doc/inc/60/63_rendering_implicit_surfaces.tex
@@ -4,11 +4,16 @@
 
 \section{Rendering von impliziten Oberflächen}
 \label{sec:rendering_implicit_surfaces}
-\todo[inline]{Add an introduction}
+
+Nachdem in den vorherigen Abschnitten Methoden zur Modellierung von
+Oberflächen behandelt wurden, zeigt folgendes Kapitel wie implizite
+Oberflächen gerendert werden
+können.~\citeauthor{glassner_introduction_1989 } beschreibt Rendering
+als Erstellung von Bildern ausgehend von
+Modellen.~\cite{glassner_introduction_1989}[S. 606]
 
 \subsection{Beleuchtungsmodell}
 \label{sec:rendering_implicit_surfaces_lighting}
-\todo[inline]{Explain lighting model}
 
 Um implizite Oberflächen darstellen zu können, ist es notwendig ein
 Beleuchtungsmodell zu wählen. Ansonsten wäre das dargestellte Bild nur schwarz.
