Add new entries to bibliography

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -343,3 +343,21 @@ GLEW is distributed under modified BSD licenses, and the header file generator i
 	year = {1990},
 	pages = {145--154}
 }
+
+@misc{opengl_foundation_rendering_2015,
+	title = {Rendering {Pipeline} {Overview} - {OpenGL}.org},
+	url = {https://www.opengl.org/wiki/Rendering_Pipeline_Overview},
+	urldate = {2016-01-07},
+	author = {{OpenGL foundation}},
+	month = may,
+	year = {2015}
+}
+
+@book{fernando_cg_2003,
+	address = {Boston, MA, USA},
+	title = {The {Cg} {Tutorial}: {The} {Definitive} {Guide} to {Programmable} {Real}-{Time} {Graphics}},
+	isbn = {0-321-19496-9},
+	publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+	author = {Fernando, Randima and Kilgard, Mark J.},
+	year = {2003}
+}
