--- a/doc/inc/30_scope.tex
+++ b/doc/inc/30_scope.tex
@@ -8,17 +8,71 @@
 \section{Motivation}
 \label{sec:motivation}
 
-\todo[inline]{Describe motivation}
+Seit der Entstehung der Computergrafik Ende der 1960-er Jahre möchte man
+möglichst realitätsnahe, echte Bilder generieren können. Angefangen mit
+\textit{Photon Tracing} 1968, über \textit{Ray Tracing} 1980, bis hin
+zum \textit{Photon Mapping} 1997/2001, haben sich immer realistischer
+wirkende Verfahren zur Darstellung von Bildern entwickelt.
+
+Da der Aufwand möglichst realistisch wirkende Bilder zu erzeugen jedoch
+relativ hoch ist, wurden diese Verfahren in der Regel nur für statische
+Bilder verwendet. Und auch dort war bzw.\ ist der Grad der Details
+begrenzt bzw.\ an Rechenzeit gebunden. Möchte man mehr Details, so wird
+mehr Rechenzeit benötigt. Daher wurde oder wird für eine Darstellung in
+Echtzeit --- also dynamische Bilder mit mindestens 25 Bildern pro
+Sekunde --- lange nur eine Näherung, basierend auf vereinfachten
+\textit{Beleuchtungsmodellen} genutzt.
+
+Durch die Weiterentwicklung der Computer und vor allem durch die
+Weiterentwicklung der Grafikkarten (GPUs), sind die komplexeren,
+realistischer wirkenden Verfahren, wie z.B.\ Ray Tracing jedoch
+wieder in den Fokus der Darstellung von Szenen in Echtzeit gerückt.
+
+Diese Projektarbeit beschreibt die theoretischen Grundlagen
+anhand~\textit{Beleuchtungsmodellen}, Verfahren für eine möglichst
+realistische Erzeugung von Bildern, \textit{Modellen zur Schattierung}
+und stellt schliesslich eine effiziente Methode des \textit{Ray
+    Tracings}, das so genannte~\textit{Sphere Tracing} vor.
+
+Um die Hypothese zu stützen, dass die komplexen, realistischer wirkenden
+Verfahren wieder in den Fokus der Darstellung von Szenen in Echtzeit
+gerückt sind, wurde ein Protoyp entwickelt, der Sphere Tracing in
+Echtzeit auf der Grafikkarte (GPU) umsetzt.
 
 \subsection{Demoszene}
 \label{subsec:demoscene}
 
-\todo[inline]{Loose some words about demoscene! }
+In den 1980er-Jahren entwickelte sich ``unter Anhängern der
+Computerszene in den \dots{} während der Blütezeit der
+8-Bit-Systeme''~\cite{wikipedia_foundation_demoszene_2015} eine Bewegung
+namens Demoszene. ``Ihre Mitglieder, die häufig Demoszener oder einfach
+Szener genannt werden, erzeugen mit Computerprogrammen auf Rechnern so
+genannte Demos – Digitale Kunst, meist in Form von musikalisch
+unterlegten
+Echtzeit-Animationen.''~\cite{wikipedia_foundation_demoszene_2015}
+
+Es handelt sich bei der Demoszene um ein sehr aktives Umfeld, in dem die
+Technologie ständig an die Grenzen des technisch machbaren gelangt. In
+diesem Umfeld entstehen regelmässig neue Ideen zur Erzeugung von noch
+realistischer wirkenden Bildern. Dabei findet eine wechselseitige
+Beeinflussung zwischen dem akademischen Umfeld und der Demoszene statt.
 
 \section{Ziele und Abgrenzung}
 \label{sec:objectives}
 
-\todo[inline]{Describe objectives}
+Diese Projektarbeit besteht aus drei Teilen. Der Beschreibung der
+theoretischen Grundlagen, der Beschreibung des als Sphere Tracing
+bekannten Verfahrens sowie der Umsetzung eines Prototypen.
+
+Für diese Projektarbeit liegt der Fokus vorallem auf der
+(mathematischen) Beschreibung von Oberflächen und der Nutzung dieser,
+sowie der Darstellung von Szenen mittels Sphere Tracing. Bei dem
+erstellten Prototypen handelt es sich um eine Art Machbarkeitsstudie,
+welche zeigt, dass Bilder mittels Sphere Tracing in Echtzeit erzeugt und
+dargestellt werden können.
+
+Diese Projektarbeit dient als Vorarbeit und Grundlage für das MSE-Modul
+\textit{MTE7102}.
 
 \subsection{Vorgängige Arbeiten}
 \label{subsec:preliminaries}
