WIP: Add conclusion

--- a/doc/inc/80_conclusion.tex
+++ b/doc/inc/80_conclusion.tex
@@ -2,15 +2,53 @@
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
 % chktex-file 27 - disable warning about missing include files
 
-\chapter{Diskussion und Fazit}
+\chapter{Schlusswort}
 \label{chap:discussion_and_conclusion}
 
-\section{Diskussion}
-\label{sec:discussion}
+In dieser Projektarbeit wurde mit Sphere Tracing eine Methode
+vorgestellt, bei welcher es sich um eine optimierte Variante von dem als
+Ray Tracing bekannten Verfahren handelt. Diese erlaubt die Darstellung
+von Szenen analog dem Ray Tracing Verfahren, aber in Echtzeit.
+
+Zuerst wurden \textit{lokale}, dann \textit{globale Beleuchtungsmodelle} inklusive der
+\textit{Renderinggleichung} vorgestellt. Weiter wurde das \textit{Ray Tracing}
+Verfahren ausgehend von der ursprünglichen Idee des Ray Tracings, ein
+als \textit{Ray Casting} bekanntes Verfahren, vorgestellt. Dabei wurde auch die
+zugrundeliegende Physik vereinfacht aufgezeigt.
+
+Für die Anwendung der Beleuchtungsmodelle in einem praktischen Sinne, so
+dass eine Szene auf dem Bildschirm sichtbar wird, wurden die klassischen
+Modelle zur Schattierung \textit{Flat-Shading}, \textit{Gouraud-Shading}
+sowie \textit{Phong-Shading} vorgestellt.
+
+Um die eigentliche Szene darstellen zu können,
+wurden~\textit{Oberflächen} im Allgemeinen eingeführt. Dabei wurde
+gezeigt, dass zur Modellierung von Oberflächen hauptsächlich zwei
+Techniken verwendet werden: Die parametrische und die
+implizite Modellierung bzw.\ Darstellung. Es wurden dann
+\textit{implizite Oberflächen} im Speziellen behandelt. Mittels
+\textit{Distanzfunktionen} wurde eine Grundlage zur Berechnung von
+Distanzen gezeigt, welche der späteren Modellierung und Darstellung dient.
+
+Ausgehend von den Distanzfunktionen wurden schliesslich
+\textit{Distanzfelder} vorgestellt, eine Art Datenstruktur basierend auf
+den Distanzfunktionen.
+
+Mit \textit{Ray Marching} und \textit{Sphere Tracing} wurden zwei Methoden
+zur Darstellung von impliziten Oberflächen aufgezeigt. Weiter wurden
+\textit{Operationen für implizite Oberflächen}, wie beispielsweise die
+Vereinigung oder Subtraktion, vorgestellt, sowie eine Menge von
+Funktionen zur Modellierung von \textit{geometrischen Primitiven}.
+
+Es wurde schliesslich gezeigt, wie die vorgestellten Grundalgen für das
+Rendering von impliziten Oberflächen genutzt werden können.
+
+Im letzten Abschnitt wurde der umgesetzte \textit{Prototyp} vorgestellt,
+wobei die Parameter \textit{Distanz}, \textit{Präzision}, die
+\textit{Anzahl Schritte} und der \textit{Skalierungsfaktor für Scahtten}
+anhand einer Beispielszene verglichen wurden.
 
 \section{Erweiterungsmöglichkeiten}
 \label{sec:further_work}
 
-\section{Fazit}
-\label{sec:fazit}
-
+Enhanced Sphere Tracing, Cone Tracing, FXAA.\
