Add new source to bibliography

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -361,3 +361,20 @@ GLEW is distributed under modified BSD licenses, and the header file generator i
 	author = {Fernando, Randima and Kilgard, Mark J.},
 	year = {2003}
 }
+
+@misc{wikipedia_foundation_demoszene_2015,
+	title = {Demoszene},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=Demoszene&oldid=149578258},
+	abstract = {Die Demoszene entwickelte sich unter Anhängern der Computerszene in den 1980er-Jahren während der Blütezeit der 8-Bit-Systeme. Ihre Mitglieder, die häufig Demoszener oder einfach Szener genannt werden, erzeugen mit Computerprogrammen auf Rechnern so genannte Demos – Digitale Kunst, meist in Form von musikalisch unterlegten Echtzeit-Animationen.
+Mittlerweile ist die Demoszene zu einem etablierten Kreis innerhalb der Computerszene geworden; auf verschiedenen Veranstaltungen stellen sie ihre Werke auf Großleinwänden vor. Langsam aber sicher bahnt sich die Demoszene auch einen Weg in die Museen und auf die progressiven Film- und Videofestivals. Heute wird vorwiegend auf herkömmlichen PCs programmiert, aber auch Dutzende anderer Plattformen – von der Xbox bis zum Game Boy – halten für die Programmierkünste her. Im deutschsprachigen Raum werden für die Produkte dieser Kunstform die Demo und das Demo gleichermaßen verwendet.
+Die Demoszene ist im Wesentlichen auf Europa beschränkt; in den USA und in Asien existieren nur relativ kleine Ableger.},
+	language = {de},
+	urldate = {2016-01-09},
+	journal = {Wikipedia},
+	author = {{Wikipedia Foundation}},
+	month = dec,
+	year = {2015},
+	note = {Page Version ID: 149578258},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/MMD4Q5R6/index.html:text/html}
+}
